# ground-truth-v1

./: .gitignore  LICENSE  PROJECT_DOCUMENTATION.md  README.md  api-spec.yaml  data-model.md  docker-compose.yml  download_host.py  run_dev.sh  tools.md
backend/: Dockerfile  check_db.py  create_test_user.py  download_model.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 22b133b00cef_initial_migration.py
backend/app/: main.py  schemas.py  worker.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analytics.py  audio.py  chat.py  documents.py  health.py  login.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/rag/: ingestion.py  retrieval.py
backend/app/services/: document_service.py
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/feature/chat/: ChatInterface.tsx
frontend/components/feature/knowledge/: KnowledgeBase.tsx
frontend/components/layout/: Sidebar.tsx
frontend/lib/: api.ts  store.ts
frontend/tests/: e2e.spec.ts
frontend/types/: index.ts
