[project]
name = "rag-backend"
version = "0.1.0"
description = "FastAPI Backend for RAG Application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "langchain>=0.1.16",
    "langchain-openai>=0.1.3",
    "langchain-community>=0.0.32",
    "chromadb>=0.4.24",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "pypdf>=4.2.0",
    "docx2txt>=0.8",
    "tiktoken>=0.6.0",
    "flashrank>=0.2.0",
    "duckduckgo-search>=5.3.0",
    "structlog>=24.1.0",
    "asgi-correlation-id>=4.3.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "asgiref>=3.7.0",
    "langchain-chroma>=0.1.0",
    "email-validator>=2.1.0",
    "scikit-learn>=1.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
